--- a/Project_TransferWise/ViewController/Main Tab View Controller/Home View Controller/SetUpBalance View Controller/SetUpBalanceViewController.xib
+++ b/Project_TransferWise/ViewController/Main Tab View Controller/Home View Controller/SetUpBalance View Controller/SetUpBalanceViewController.xib
@@ -1,22 +1,124 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13142" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="16097.2" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+    <device id="retina5_5" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12042"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16087"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="SetUpBalanceViewController" customModuleProvider="target">
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="SetUpBalanceViewController" customModule="Project_TransferWise" customModuleProvider="target">
             <connections>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="i5M-Pr-FkT">
-            <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+            <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-            <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+            <subviews>
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="EGr-N3-gFa">
+                    <rect key="frame" x="17" y="14" width="29" height="29"/>
+                    <state key="normal" image="close"/>
+                    <connections>
+                        <action selector="close" destination="-1" eventType="touchUpInside" id="CXI-MU-27r"/>
+                    </connections>
+                </button>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Set up balances" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cxk-XG-wFp">
+                    <rect key="frame" x="18" y="62.000000000000007" width="164.33333333333334" height="26.333333333333336"/>
+                    <fontDescription key="fontDescription" type="boldSystem" pointSize="22"/>
+                    <color key="textColor" red="0.21568627450980393" green="0.31764705882352939" blue="0.49411764705882355" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                    <nil key="highlightedColor"/>
+                </label>
+                <stackView opaque="NO" contentMode="scaleToFill" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="s4b-T2-e1O">
+                    <rect key="frame" x="17" y="121.66666666666667" width="379" height="59.666666666666671"/>
+                    <subviews>
+                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="apple" translatesAutoresizingMaskIntoConstraints="NO" id="VlU-rt-2xz">
+                            <rect key="frame" x="0.0" y="0.0" width="40" height="59.666666666666664"/>
+                        </imageView>
+                        <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="top" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="A3f-SG-jxF">
+                            <rect key="frame" x="45" y="0.0" width="334" height="59.666666666666664"/>
+                            <subviews>
+                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Hold 50 + currencies" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="G4A-0i-H5q">
+                                    <rect key="frame" x="0.0" y="0.0" width="171" height="20.333333333333332"/>
+                                    <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
+                                    <color key="textColor" red="0.21568627450980393" green="0.31764705882352939" blue="0.49411764705882355" alpha="1" colorSpace="calibratedRGB"/>
+                                    <nil key="highlightedColor"/>
+                                </label>
+                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Convert between balances in seconds using the real exchange rate." textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="k4e-ti-vKm">
+                                    <rect key="frame" x="0.0" y="28.333333333333329" width="319.33333333333331" height="31.333333333333329"/>
+                                    <fontDescription key="fontDescription" type="system" pointSize="13"/>
+                                    <color key="textColor" red="0.6588235294117647" green="0.66666666666666663" blue="0.67450980392156867" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                    <nil key="highlightedColor"/>
+                                </label>
+                            </subviews>
+                        </stackView>
+                    </subviews>
+                </stackView>
+                <stackView opaque="NO" contentMode="scaleToFill" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="3Vj-3A-Mq1">
+                    <rect key="frame" x="17" y="221.33333333333334" width="379" height="59.666666666666657"/>
+                    <subviews>
+                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="apple" translatesAutoresizingMaskIntoConstraints="NO" id="eT1-uW-JMR">
+                            <rect key="frame" x="0.0" y="0.0" width="40" height="59.666666666666664"/>
+                        </imageView>
+                        <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="top" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="ng5-To-GdL">
+                            <rect key="frame" x="45" y="0.0" width="334" height="59.666666666666664"/>
+                            <subviews>
+                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Receive money, free of change" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Alq-gI-UkH">
+                                    <rect key="frame" x="0.0" y="0.0" width="249.66666666666666" height="20.333333333333332"/>
+                                    <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
+                                    <color key="textColor" red="0.2156862745" green="0.31764705879999999" blue="0.4941176471" alpha="1" colorSpace="calibratedRGB"/>
+                                    <nil key="highlightedColor"/>
+                                </label>
+                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Get international bank details to receive global currencies, straight to your balance." textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="NOi-I6-7xD">
+                                    <rect key="frame" x="0.0" y="28.333333333333314" width="284.66666666666669" height="31.333333333333329"/>
+                                    <fontDescription key="fontDescription" type="system" pointSize="13"/>
+                                    <color key="textColor" red="0.6588235294" green="0.66666666669999997" blue="0.67450980390000004" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                    <nil key="highlightedColor"/>
+                                </label>
+                            </subviews>
+                        </stackView>
+                    </subviews>
+                </stackView>
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="eDB-4L-CEy">
+                    <rect key="frame" x="0.0" y="686.66666666666663" width="414" height="49.333333333333371"/>
+                    <color key="backgroundColor" red="0.0" green="0.72549019607843135" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                    <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="15"/>
+                    <state key="normal" title="Let's go">
+                        <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    </state>
+                    <connections>
+                        <action selector="letsGo" destination="-1" eventType="touchUpInside" id="6GY-gi-mw4"/>
+                    </connections>
+                </button>
+            </subviews>
+            <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+            <constraints>
+                <constraint firstAttribute="trailing" secondItem="3Vj-3A-Mq1" secondAttribute="trailing" constant="18" id="0o1-RM-3mE"/>
+                <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" relation="lessThanOrEqual" secondItem="cxk-XG-wFp" secondAttribute="trailing" constant="249" id="4dR-TB-bAb"/>
+                <constraint firstItem="s4b-T2-e1O" firstAttribute="top" secondItem="cxk-XG-wFp" secondAttribute="bottom" constant="33.333333333333343" id="5KU-Zw-jNZ"/>
+                <constraint firstItem="eDB-4L-CEy" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" id="5xS-rK-kww"/>
+                <constraint firstItem="cxk-XG-wFp" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" constant="18" id="9Ev-nX-879"/>
+                <constraint firstItem="cxk-XG-wFp" firstAttribute="top" secondItem="EGr-N3-gFa" secondAttribute="bottom" constant="19" id="9Kd-Sp-qB2"/>
+                <constraint firstItem="3Vj-3A-Mq1" firstAttribute="top" secondItem="s4b-T2-e1O" secondAttribute="bottom" constant="40" id="Csm-EJ-Nfj"/>
+                <constraint firstItem="EGr-N3-gFa" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" constant="14" id="EWS-Dy-ltG"/>
+                <constraint firstItem="s4b-T2-e1O" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" constant="17" id="GX9-sb-TYH"/>
+                <constraint firstItem="EGr-N3-gFa" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" constant="17" id="HML-CZ-7Jk"/>
+                <constraint firstItem="eDB-4L-CEy" firstAttribute="height" secondItem="i5M-Pr-FkT" secondAttribute="height" multiplier="0.067" id="Jcu-sL-ge6"/>
+                <constraint firstItem="fnl-2z-Ty3" firstAttribute="bottom" secondItem="eDB-4L-CEy" secondAttribute="bottom" id="MGM-fF-VNE"/>
+                <constraint firstItem="EGr-N3-gFa" firstAttribute="width" secondItem="i5M-Pr-FkT" secondAttribute="width" multiplier="0.0942029" constant="-10" id="TNA-Pv-ggA"/>
+                <constraint firstAttribute="trailing" secondItem="s4b-T2-e1O" secondAttribute="trailing" constant="18" id="WSM-5D-TEx"/>
+                <constraint firstItem="EGr-N3-gFa" firstAttribute="height" secondItem="i5M-Pr-FkT" secondAttribute="height" multiplier="0.0353261" constant="3.0000000000000036" id="bgR-Hf-bcW"/>
+                <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="eDB-4L-CEy" secondAttribute="trailing" id="uBp-AA-hwz"/>
+                <constraint firstItem="3Vj-3A-Mq1" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" constant="17" id="wYw-Ic-PG8"/>
+            </constraints>
             <viewLayoutGuide key="safeArea" id="fnl-2z-Ty3"/>
+            <point key="canvasLocation" x="137.68115942028987" y="146.73913043478262"/>
         </view>
     </objects>
+    <resources>
+        <image name="apple" width="40" height="40"/>
+        <image name="close" width="20" height="20"/>
+    </resources>
 </document>
