--- a/Project_TransferWise/ViewController/Main Tab View Controller/MainTabViewController.xib
+++ b/Project_TransferWise/ViewController/Main Tab View Controller/MainTabViewController.xib
@@ -21,7 +21,7 @@
                 <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="FyP-dw-PFy">
                     <rect key="frame" x="0.0" y="609" width="414" height="127"/>
                     <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxX="YES" flexibleMinY="YES" flexibleMaxY="YES"/>
-                    <color key="backgroundColor" systemColor="systemGray6Color" red="0.94901960780000005" green="0.94901960780000005" blue="0.96862745100000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                    <color key="backgroundColor" red="0.18039215689999999" green="0.81568627449999997" blue="0.43137254899999999" alpha="1" colorSpace="calibratedRGB"/>
                 </view>
             </subviews>
             <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
